# live2d-cubism-agent-lab

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/skills/character-spec-generator/: SKILL.md
.agents/skills/character-spec-generator/agents/: openai.yaml
.agents/skills/character-spec-generator/assets/: character_spec.template.yaml
.agents/skills/character-spec-generator/references/: field_inference_policy.md
.agents/skills/image-to-live2d-assets/: SKILL.md
.agents/skills/image-to-live2d-assets/agents/: openai.yaml
.agents/skills/image-to-live2d-assets/assets/: asset_generation_plan.template.yaml  asset_generation_queue.template.yaml  asset_manifest.template.yaml  image_prompt.template.md  layer_map.template.yaml  psd_separation_instructions.template.md
.agents/skills/image-to-live2d-assets/references/: inpainting_policy.md  layer_generation_policy.md  part_taxonomy.md  psd_export_policy.md
.agents/skills/live2d-cubism-workflow/: SKILL.md
.agents/skills/live2d-one-image-vtuber/: SKILL.md
.github/workflows/: pytest.yml
docs/: asset-generation-orchestration.md  cubism-diagnostics.md  inpainting.md  mask-derivation.md  segmentation.md  session_log.md
examples/: action_plan.no_assets.sample.yaml  action_plan.real_assets.sample.yaml  action_plan.sample.yaml  asset_feedback.sample.yaml  asset_generation_plan.sample.yaml  asset_generation_queue.sample.yaml  asset_generation_run.sample.yaml  asset_manifest.sample.yaml  asset_quality.sample.yaml  character_spec.sample.yaml  cubism_environment_report.sample.yaml  cubism_evaluation.sample.yaml  inpainting_request.sample.yaml  layer_map.sample.yaml  mask_derivation_result.sample.yaml  mask_derivation_review.sample.yaml  mask_manifest.sample.yaml  segmentation_assignment.sample.yaml  segmentation_ranked.sample.yaml  segmentation_result.sample.yaml
schemas/: asset_generation_run.schema.yaml  asset_quality.schema.yaml  cubism_environment_report.schema.yaml  cubism_smoke_test_report.schema.yaml  inpainting_request.schema.yaml  inpainting_result.schema.yaml  inpainting_selection.schema.yaml  mask_derivation_result.schema.yaml  mask_derivation_review.schema.yaml  mask_manifest.schema.yaml  segmentation_assignment.schema.yaml  segmentation_ranked.schema.yaml  segmentation_result.schema.yaml
scripts/: __init__.py  validate_action_plan.py  validate_character_spec.py  validate_layer_map.py
tests/: test_action_plan_validation.py  test_artifact_validation.py  test_asset_feedback_validation.py  test_asset_generation_orchestrator.py  test_asset_generation_queue_validation.py  test_asset_image_pipeline.py  test_asset_manifest_validation.py  test_asset_pipeline_benchmark.py  test_asset_pipeline_cli.py  test_asset_queue_builder.py  test_backend_registry.py  test_ci_workflow.py  test_cubism_api_payloads.py  test_cubism_bridge.py  test_cubism_environment_probe.py  test_cubism_environment_profiles.py  test_cubism_evaluation.py  test_cubism_smoke_test.py  test_cubism_ui_commands.py  test_inpainting_backends.py  test_inpainting_pipeline.py  test_mask_derivation_algorithms.py  test_mask_derivation_assignment.py  test_mask_derivation_benchmark.py  test_mask_derivation_pipeline.py  test_material_planner.py  test_resource_scheduler.py  test_segmentation_assignment.py  test_segmentation_backends.py  test_segmentation_pipeline.py  test_segmentation_ranking.py
tools/: __init__.py  action_plan.py  artifact_validation.py  asset_feedback_validator.py  asset_generation_orchestrator.py  asset_generation_queue_validator.py  asset_manifest_validator.py  asset_pipeline_common.py  asset_quality_evaluator.py  asset_queue_builder.py  asset_recomposer.py  asset_refinement_planner.py  automatic_mask_deriver.py  automatic_segmenter.py  backend_registry.py  cubism_api.py  cubism_bridge.py  cubism_control_tree_snapshot.py  cubism_environment_probe.py  cubism_evaluation.py  cubism_smoke_test.py  cubism_ui.py  generative_inpainter.py  hidden_region_completer.py  inpainting_candidate_ranker.py  inpainting_preview.py  inpainting_prompt_builder.py  mask_candidate_generator.py  mask_derivation_assignment.py  mask_derivation_preview.py  mask_derivation_ranker.py  material_planner.py  motion_stress_tester.py  part_extractor.py  psd_asset_builder.py  resource_scheduler.py  segmentation_assignment_planner.py  segmentation_candidate_ranker.py  segmentation_preview.py
tools/backends/: __init__.py
tools/backends/inpainting/: __init__.py  base.py  diffusers_backend.py  flux_fill.py  mock.py
tools/backends/segmentation/: __init__.py  contracts.py  grounded_sam2.py  integrity.py  mock.py  sam2.py
tools/cubism_ui_profiles/: __init__.py  cubism-5-en.yaml  cubism-5-ja.yaml
tools/mask_derivation/: __init__.py  algorithms.py  pipeline.py
(+14 files in other folders)
