[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "live2d-cubism-agent-lab"
version = "0.1.0"
description = "Safe, high-level Codex tooling for Live2D Cubism workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Pillow>=11.0",
  "PyYAML>=6.0.2",
  "websockets>=14.2",
]

[project.optional-dependencies]
inpainting = [
  "accelerate>=1.2",
  "diffusers>=0.32",
  "torch>=2.5",
  "transformers>=4.47",
]
windows = [
  "PyAutoGUI>=0.9.54",
  "psutil>=7.0",
  "pywinauto>=0.6.8",
]
dev = [
  "jsonschema>=4.23",
  "mypy>=1.14",
  "pytest>=8.3",
  "ruff>=0.9",
  "types-jsonschema>=4.23",
  "types-PyYAML>=6.0.12",
]
segmentation = [
  "huggingface-hub>=0.27",
  "numpy>=1.26",
  "torch>=2.5",
  "transformers>=4.48",
]

[project.scripts]
cubism-ui = "tools.cubism_ui:main"
cubism-api = "tools.cubism_api:main"
cubism-bridge = "tools.cubism_bridge:main"
material-planner = "tools.material_planner:main"
asset-manifest-validator = "tools.asset_manifest_validator:main"
asset-feedback-validator = "tools.asset_feedback_validator:main"
asset-generation-queue-validator = "tools.asset_generation_queue_validator:main"
asset-queue-builder = "tools.asset_queue_builder:main"
cubism-evaluation = "tools.cubism_evaluation:main"
mask-candidate-generator = "tools.mask_candidate_generator:main"
part-extractor = "tools.part_extractor:main"
hidden-region-completer = "tools.hidden_region_completer:main"
asset-recomposer = "tools.asset_recomposer:main"
asset-quality-evaluator = "tools.asset_quality_evaluator:main"
motion-stress-tester = "tools.motion_stress_tester:main"
asset-refinement-planner = "tools.asset_refinement_planner:main"
generative-inpainter = "tools.generative_inpainter:main"
inpainting-candidate-ranker = "tools.inpainting_candidate_ranker:main"
inpainting-prompt-builder = "tools.inpainting_prompt_builder:main"
inpainting-preview = "tools.inpainting_preview:main"
psd-asset-builder = "tools.psd_asset_builder:main"
automatic-segmenter = "tools.automatic_segmenter:main"
segmentation-candidate-ranker = "tools.segmentation_candidate_ranker:main"
segmentation-assignment-planner = "tools.segmentation_assignment_planner:main"
segmentation-preview = "tools.segmentation_preview:main"
validate-action-plan = "scripts.validate_action_plan:main"

[tool.hatch.build.targets.wheel]
packages = ["tools", "scripts"]

[tool.pytest.ini_options]
addopts = "-q -m 'not benchmark and not gpu'"
testpaths = ["tests"]
markers = [
  "benchmark: opt-in wall-clock performance checks for 2048x2048 image processing",
  "gpu: opt-in tests that load installed segmentation or inpainting models on a supported accelerator",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tools.cubism_ui"
ignore_missing_imports = true
warn_unused_ignores = false
